# LLM2BinFuncSim

./: .gitignore  .gitmodules  README.md  bootstrap.sh  pyproject.toml
examples/: da-unixcoder.sh  dataset_info.json  emb_extraction.sh  sct-unixcoder.sh
llm2binfuncsim/: extract_embeddings.py  mypy.ini  train_bash.py
llm2binfuncsim/config/: __init__.py  data_args.py  model_args.py
llm2binfuncsim/dsets/: __init__.py  loader.py  preprocess.py
llm2binfuncsim/samplers/: __init__.py  pair_sampler.py
llm2binfuncsim/tuner/: __init__.py  tune.py
llm2binfuncsim/tuner/cl/: __init__.py  workflow.py
llm2binfuncsim/tuner/core/: __init__.py  loader.py  parser.py
llm2binfuncsim/tuner/da/: __init__.py  workflow.py
llm2binfuncsim/tuner/sct/: __init__.py  workflow.py
llm2binfuncsim/utilities/: __init__.py  constants.py  logger.py  loggers.py  losses.py  metrics.py  misc.py  trainers.py
patch/: hermessim.patch  llm_node_encoder.json  preprocess.py  preprocess_all.sh  train.json
preprocess/: build_graph_dataset.py  filter_graph_dataset.py
scripts/: cl-unixcoder.sh
