[tool.poetry]
name = "llm2binfuncsim"
version = "0.1.0"
description = ""
authors = ["Stefano De Rosa <stefanoderosa1999@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
