[tool.poetry]
name = "llm2binfuncsim"
version = "0.1.0"
description = ""
authors = ["Stefano De Rosa <stefanoderosa1999@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.11.2"
transformers = "^4.45.0"
datasets = "^3.0.0"
polars = "^1.8.2"
pandas = "^2.2.3"
torch = "^2.4.1"
networkx = "^3.3"
numpy = "^2.1.1"
scikit-learn = "^1.5.2"
click = "^8.1.7"
pydantic = "^2.9.2"
accelerate = "^0.34.2"
wandb = "^0.18.1"
gdown = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
